alignment solved

--- a/css/pages.css
+++ b/css/pages.css
@@ -259,8 +259,10 @@
     border-radius: 10px;
     overflow: hidden;
     text-align: justify;
+    align-items: center;    
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
+
 .category-grid h3,p,a{
     margin-top: 20px;
     margin-left: 20px;
@@ -270,6 +272,7 @@
 }
 .category-item a{
     margin-bottom: 20px;
+    margin-left: 480px;
 }
 .category-item img {
     width: 100%;
